[gd_scene load_steps=4 format=3 uid="uid://dfh64ywusg2xq"]

[ext_resource type="Script" path="res://return_cell.gd" id="1_ihuw4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ouiyr"]
content_margin_left = 18.0
content_margin_top = 12.0
content_margin_right = 18.0
content_margin_bottom = 12.0
bg_color = Color(0, 0.615686, 0.65098, 0.6)
border_color = Color(0.325, 0.325, 0.325, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Theme" id="Theme_velop"]
GraphNode/styles/panel = SubResource("StyleBoxFlat_ouiyr")

[node name="return_cell" type="GraphNode"]
offset_right = 448.0
offset_bottom = 95.0
theme = SubResource("Theme_velop")
title = "Return Node"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 0, 0, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = false
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("1_ihuw4")

[node name="Connection" type="Container" parent="."]
layout_mode = 2

[node name="cellDetails" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="VBoxContainer" type="VBoxContainer" parent="cellDetails"]
layout_mode = 2

[node name="labelLabel" type="Label" parent="cellDetails/VBoxContainer"]
layout_mode = 2
text = "Label"

[node name="labelBox" type="TextEdit" parent="cellDetails/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Empty Label"

[node name="idLabel" type="Label" parent="cellDetails/VBoxContainer"]
layout_mode = 2
text = "Cell ID"

[node name="CellID" type="TextEdit" parent="cellDetails/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Cell ID (cannot compile without)"

[node name="returnValId" type="Label" parent="cellDetails/VBoxContainer"]
layout_mode = 2
text = "Return Value"

[node name="returnValBox" type="TextEdit" parent="cellDetails/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "No return value"
